# rototo

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .tool-versions  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  go.mod  justfile  lint-contract-layer.md  lint-pipeline-spec.md  lint-rearch-review.md  lint-rearch-todo.md  lint-warning-backlog.md  requirements-dev.txt  rust-toolchain.toml
.github/ISSUE_TEMPLATE/: ci-failure.md  dev-setup-failure.md  flaky-test.md  release-failure.md
.github/workflows/: ci.yml  cloudflare-pages.yml  deep-ci.yml  dependency-freshness.yml  npm-bootstrap.yml  release.yml
apps/admin/: .env.example  README.md  next.config.mjs  package-lock.json  package.json
apps/console/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/console-server/: .env.example  Cargo.toml  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
apps/console-server/assets/: console-surfaces.lua
apps/console-server/src/: app-credential.ts  app.ts  approvals.ts  budgets.ts  change-sets.ts  config.ts  context.ts  decide.ts  enroll.ts  errors.ts  fire-drill.ts  git.ts  github.ts  grant-diagnostics.ts  lib.rs  local-auth.ts  lsp-bridge.ts  main.ts  native.ts  oidc.ts  packages.ts  reconciler.ts  review.ts  sessions.ts  store.ts  surfaces.ts  token-crypto.ts
apps/console-server/src/routes/: admin.ts  auth.ts  change-sets.ts  lsp.ts  packages.ts
apps/console-server/tests/: app.test.ts  bindings.test.ts  change-sets.test.ts  config.test.ts  decide.test.ts  enrollment.test.ts  fake-git.ts  fire-drill.test.ts  fleet.test.ts  helpers.ts  honesty.test.ts  latency.test.ts  priya.test.ts  read-side.test.ts  reconciler.test.ts  rollout.test.ts  stakeholder.test.ts  surfaces.test.ts  token-crypto.test.ts  understanding.test.ts  walkthrough.test.ts  webhooks.test.ts
apps/console-web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
design/: addressing.md  console-git-ops.md  console-identity-authz.md  console-implementation-plan.md  console-lifecycle.md  console-release.md  console-semantic.md  console-surfaces.md  console-system-view.md  console.md  matrix-review-findings.md  package-reflection.md  tenant-configuration.md  use-cases.md
docs/: README.md  release.md
docs/src/: adoption.md  application-integration.md  bucketed-rollout.md  cli.md  concepts.md  configuration-primitives.md  console.md  development-workflow.md  diagnostics.md  expressions.md  getting-started.md  incident-banner.md  index.md  modeling-runtime-configuration.md  motivation.md  notification-delivery-policy.md  onboarding-checklist.md  operating-runtime-configuration.md  operational-switches.md  package-format.md  package-layering.md  package-sources.md  production-workflow.md  quickstart.md  reference-catalogs.md  reference-cli-commands.md  reference-cli-overview.md  reference-context.md  reference-custom-lua-lint.md  reference-diagnostics.md  reference-json-output.md  reference-lint-overview.md  reference-package-layering.md  reference-package-layout.md  reference-package-manifest.md  reference-package-sources.md  (+26 more)
internal-docs/: console-stage.md  docs-outline.md  release.md
scripts/: check-dependency-freshness.sh  check-vocabulary.sh  clean-dev.sh  console-observe.mjs  dev-doctor.sh  prepare-java-native-resources.sh  release-artifact-manifest.mjs  release-smoke.sh
sdks/java/: Cargo.toml  README.md  pom.xml
sdks/java/src/: lib.rs
sdks/java/src/main/java/com/rototo/: InspectOptions.java  Json.java  LintMode.java  LoadOptions.java  Native.java  NativeLibrary.java  QualifierResolution.java  RefreshStatus.java  RefreshingWorkspace.java  RefreshingWorkspaceOptions.java  ResolveOptions.java  Rototo.java  RototoException.java  VariableResolution.java  Workspace.java  WorkspaceLint.java
sdks/java/src/main/java/dev/rototo/: InspectOptions.java  Json.java  LintMode.java  LoadOptions.java  Native.java  NativeLibrary.java  Package.java  PackageIdentity.java  PackageLayerIdentity.java  PackageLint.java  QualifierResolution.java  RefreshEvent.java  RefreshEventSummary.java  RefreshSnapshot.java  RefreshStatus.java  RefreshingPackage.java  RefreshingPackageOptions.java  RefreshingWorkspace.java  RefreshingWorkspaceOptions.java  ResolveOptions.java  Rototo.java  RototoException.java  SdkIdentity.java  VariableResolution.java  Workspace.java  WorkspaceLint.java
sdks/java/src/test/java/com/rototo/: JavaSdkTest.java  PackageSmokeTest.java
sdks/java/src/test/java/dev/rototo/: JavaSdkTest.java  PackageSmokeTest.java
sdks/python/: Cargo.toml  README.md  pyproject.toml
sdks/python/python/rototo/: __init__.py
sdks/python/src/: lib.rs
sdks/python/tests/: test_api.py  test_contract.py  test_packaging.py  test_refresh.py
sdks/typescript/: Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
sdks/typescript/src/: index.ts  lib.rs  native.ts
sdks/typescript/tests/: api.test.js  contract.test.js  package-smoke.mjs  packaging.test.js  refresh.test.js
spec/: package-terminology.md  refresh-observability.md  ui-widgets.json
src/: address.rs  catalog.rs  diagnostics.rs  diagnostics_catalog.rs  docs.rs  edit.rs  error.rs  expression.rs  fixtures.rs  inspect.rs  layering.rs  lib.rs  lint.rs  lsp.rs  lua_lint.rs  main.rs  model.rs  output.rs  pack.rs  package.rs  predicate.rs  resolve.rs  sdk.rs  source.rs  style.rs  testing.rs  workspace.rs
tests/: cli.rs  composition-matrix.md  composition.rs  diagnostics.rs  docs_consistency.rs  edit_engine.rs  examples.rs  expression-matrix.md  fixtures.rs  init.rs  lint-identity-matrix.md  lsp-matrix.md  lua-lint-matrix.md  package_diff.rs  package_inspect.rs  package_lint.rs  pin_store.rs  projection-matrix.md  qualifier_variable.rs  refresh-matrix.md  release_versions.rs  resolution-matrix.md  sdk-load-matrix.md  sdk.rs  sdk_contract.rs  semantic-index-matrix.md  semantic_model.rs  source-auth-matrix.md  workspace_diff.rs  workspace_inspect.rs  workspace_layering.rs  workspace_lint.rs
(+1018 files in other folders)
