[package]
name = "rototo"
version = "0.1.0-alpha.1"
edition = "2024"
description = "Control plan for runtime configuration of your application."
license = "MIT OR Apache-2.0"
repository = "https://github.com/manasgarg/rototo"
homepage = "https://docs.rototo.pirogram.com"
documentation = "https://docs.rs/rototo"
readme = "README.md"
keywords = ["configuration", "feature-flags", "rules", "cli", "sdk"]
categories = ["command-line-utilities", "config"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
flate2 = "1"
glob = "0.3"
jsonschema = { version = "0.33", default-features = false }
mlua = { version = "0.10", default-features = false, features = ["lua54", "serialize", "vendored"] }
pulldown-cmark = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
tempfile = "3"
tokio = { version = "1", features = ["fs", "io-std", "io-util", "macros", "net", "process", "rt-multi-thread", "sync", "test-util", "time"] }
toml = "0.8"
toml-span = "0.7.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
