[package]
name = "rototo"
version = "0.1.0-alpha.8"
edition = "2024"
description = "Control plane for runtime configuration of your application."
license = "MIT OR Apache-2.0"
repository = "https://github.com/manasgarg/rototo"
homepage = "https://docs.rototo.dev"
documentation = "https://docs.rs/rototo"
readme = "README.md"
keywords = ["configuration", "feature-flags", "rules", "cli", "sdk"]
categories = ["command-line-utilities", "config"]
# The published crate is the core and CLI; the console ships separately as
# the rototo-console npm package. Frontend sources, SDKs, and tests stay
# out of the package.
include = [
    "/Cargo.toml",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/README.md",
    "/docs/src/**",
    "/docs/theme/**",
    "/src/**",
]

[workspace]
members = [
    "apps/console-server",
    "examples/sdk-app",
    "sdks/go",
    "sdks/java",
    "sdks/python",
    "sdks/typescript",
]
resolver = "3"

[dependencies]
# Pinned exactly: rototo's expression language is a CEL subset evaluated by this
# engine, so its parser/evaluator semantics are part of rototo's contract. Bump
# deliberately and re-run the expression suite.
cel = { version = "=0.14.0", features = ["json"] }
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
flate2 = "1"
glob = "0.3"
jsonschema = { version = "0.33", default-features = false }
mlua = { version = "0.10", default-features = false, features = ["lua54", "serialize", "vendored"] }
pulldown-cmark = "0.13"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
ring = "0.17"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
tempfile = "3"
tokio = { version = "1", features = ["fs", "io-std", "io-util", "macros", "process", "rt-multi-thread", "sync", "test-util", "time"] }
toml = "0.8"
# The edit engine rewrites package TOML in place; toml_edit preserves the
# comments and formatting around each splice.
toml_edit = "0.22"
toml-span = "0.7.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
# Used by the SDK refresh-event stream for stable event ids.
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
assert_cmd = "2"
flate2 = "1"
predicates = "3"
tar = "0.4"
