[package]
name = "rototo-python"
version = "0.1.0-alpha.6"
edition = "2024"
publish = false

[lib]
name = "_rototo"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py310"] }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
pythonize = "0.28"
rototo = { path = "../..", default-features = false }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
