[build-system]
requires = ["maturin>=1.13,<2"]
build-backend = "maturin"

[project]
name = "rototo"
version = "0.1.0-alpha.5"
description = "Python SDK for rototo runtime configuration workspaces."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "rototo contributors" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Rust",
  "Topic :: Software Development :: Libraries",
]

[tool.maturin]
module-name = "rototo._rototo"
python-source = "python"
