[package]
name = "rototo-typescript"
version = "0.1.0-alpha.7"
edition = "2024"
publish = false

[lib]
name = "rototo"
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.9.0", features = ["async", "serde-json"] }
napi-derive = "3.5.6"
rototo = { path = "../..", default-features = false }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }

[build-dependencies]
napi-build = "2.3.2"
